[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/_tests/navigation/Enemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/Monstro rastejante.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 2.0

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 1 )
move_speed = 5.0

[node name="chasing_timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Monstro rastejante" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0.0989553, 0 )

[node name="FOV" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="FOV"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )
[connection signal="timeout" from="chasing_timer" to="." method="_on_chasing_timer_timeout"]
[connection signal="body_entered" from="FOV" to="." method="_on_FOV_body_entered"]
[connection signal="body_exited" from="FOV" to="." method="_on_FOV_body_exited"]
